10_course_project/Kuber/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  namespace: myns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
      - name: api-gateway-service
        image: monguard2/otus_kurs_api_gateway:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: myns
  labels:
      app: api-gateway-service  
spec:
  selector:
    app: api-gateway-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
